# FoodIO_Geolocation

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: handlers.rs  jwt_auth.rs  main.rs  models.rs
src/handlers/: event_actor.rs  events.rs  handler.rs  incoming_order_processor.rs  location_logger.rs  location_request_processor.rs  processor.rs  websocket_actor.rs
src/models/: error.rs  location_log.rs  position.rs  updates.rs
